# popsim

./: .gitignore  CMakeLists.txt  README.md  manual.sh
cmake/Modules/: SetFortranFlags.cmake
data/: pedigree.txt
scripts/: balancedPedigreeMaker.py
src/blup/: BSRibsCalc.f90  CMakeLists.txt  blup_module.f90  makegenotype.f90  relationMatrix.f90
src/cio/: cgetsizebin.c  cio.h  creadbin.c  cwritebin.c
src/evolution/: CMakeLists.txt  SNP_map.f90  evolution_module.f90  getQTLandSNP.f90  initialiseGenotypes.f90  other.f90  prepareMutRec.f90  readPedigree.f90  sampleGamete.f90  sampleMutation.f90  simulateTBV.f90
src/main/: CMakeLists.txt  simulate.f90
src/math/: CMakeLists.txt  math.f90  stats.f90
src/quickSort/: CMakeLists.txt  quickSort.f90  sortax_nested.f90
src/rng/: CMakeLists.txt  choice.f90  gnormal.f90  inormal.f90  poissonProb.f90  rng_module.f90  seeding.f90
src/rnmodel/: CMakeLists.txt  covariate.f90  selection.f90  setUserParameters.f90  simulatePhenotype.f90  user_type.f90
src/utils/: CMakeLists.txt  askFilename.f90  constants.f90  countNumberLines.f90  detInv.f90  dunpack.f90  global_module.f90  readData.f90  trace.f90
tests/: input
